--- a/src/view/ArtikelSuchen.form
+++ b/src/view/ArtikelSuchen.form
@@ -28,21 +28,18 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-              <Component id="ArtikelAnzeige" min="-2" pref="950" max="-2" attributes="0"/>
+              <Component id="ArtikelSuche" min="-2" pref="950" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <Component id="ArtikelAnzeige" min="-2" pref="800" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="4" max="32767" attributes="0"/>
-          </Group>
+          <Component id="ArtikelSuche" min="-2" pref="674" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JPanel" name="ArtikelAnzeige">
+    <Container class="javax.swing.JPanel" name="ArtikelSuche">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[1200, 900]"/>
@@ -56,35 +53,31 @@
               <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="355" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="392" max="-2" attributes="0"/>
                           <Component id="jLabel37" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="jbAnzeigen_ArtikelAnzeige" min="-2" pref="130" max="-2" attributes="0"/>
+                              <Component id="jbAnzeigen_ArtikelSuchen" min="-2" pref="130" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jScrollPane1" min="-2" pref="871" max="-2" attributes="0"/>
                                   <Group type="102" attributes="0">
                                       <Component id="jcbSuchkriterium_ArtikelAnzeige" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="jtfArtikelID_ArtikelAnzeigen" min="-2" pref="150" max="-2" attributes="0"/>
+                                      <Component id="jtfArtikelID_ArtikelSuchen" min="-2" pref="150" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="jbsuchen_artikelanzeigen" min="-2" pref="35" max="-2" attributes="0"/>
+                                      <Component id="jbsuchen_artikelsuchen" min="-2" pref="35" max="-2" attributes="0"/>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                      <Component id="jbBearbeiten_artikelAnzeigen" min="-2" pref="35" max="-2" attributes="0"/>
+                                      <Component id="jbBearbeiten_artikelSuchen" min="-2" pref="35" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="jbLöschen_artikelAnzeigen" min="-2" pref="35" max="-2" attributes="0"/>
+                                      <Component id="jbLöschen_artikelSuchen" min="-2" pref="35" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
                       </Group>
                   </Group>
-<<<<<<< HEAD
-                  <EmptySpace pref="186" max="32767" attributes="0"/>
-=======
                   <EmptySpace pref="52" max="32767" attributes="0"/>
->>>>>>> 89806cc862e2033d0b3cc242f9fc6a7422d9ef87
               </Group>
           </Group>
         </DimensionLayout>
@@ -97,23 +90,19 @@
                   <Component id="jSeparator4" min="-2" pref="2" max="-2" attributes="0"/>
                   <EmptySpace min="33" pref="33" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jbsuchen_artikelanzeigen" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jbsuchen_artikelsuchen" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jtfArtikelID_ArtikelAnzeigen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="jtfArtikelID_ArtikelSuchen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                           <Component id="jcbSuchkriterium_ArtikelAnzeige" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="jbBearbeiten_artikelAnzeigen" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="jbLöschen_artikelAnzeigen" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jbBearbeiten_artikelSuchen" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jbLöschen_artikelSuchen" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
-<<<<<<< HEAD
-                  <EmptySpace pref="33" max="32767" attributes="0"/>
-=======
                   <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
-                  <Component id="jbAnzeigen_ArtikelAnzeige" min="-2" pref="30" max="-2" attributes="0"/>
-                  <EmptySpace pref="150" max="32767" attributes="0"/>
->>>>>>> 89806cc862e2033d0b3cc242f9fc6a7422d9ef87
+                  <Component id="jbAnzeigen_ArtikelSuchen" min="-2" pref="30" max="-2" attributes="0"/>
+                  <EmptySpace pref="24" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -124,12 +113,12 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="24" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Artikel Anzeigen"/>
+            <Property name="text" type="java.lang.String" value="Artikel Suchen"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JSeparator" name="jSeparator4">
         </Component>
-        <Component class="javax.swing.JTextField" name="jtfArtikelID_ArtikelAnzeigen">
+        <Component class="javax.swing.JTextField" name="jtfArtikelID_ArtikelSuchen">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="14" style="0"/>
@@ -143,17 +132,17 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtfArtikelID_ArtikelAnzeigenKeyTyped"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtfArtikelID_ArtikelSuchenKeyTyped"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jbsuchen_artikelanzeigen">
+        <Component class="javax.swing.JButton" name="jbsuchen_artikelsuchen">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/view/lupe2.png"/>
+              <Image iconType="3" name="/view/lupe.png"/>
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbsuchen_artikelanzeigenActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbsuchen_artikelsuchenActionPerformed"/>
           </Events>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
@@ -182,7 +171,7 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JButton" name="jbL&#xf6;schen_artikelAnzeigen">
+        <Component class="javax.swing.JButton" name="jbL&#xf6;schen_artikelSuchen">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
@@ -195,10 +184,10 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbL&#xf6;schen_artikelAnzeigenActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbL&#xf6;schen_artikelSuchenActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jbBearbeiten_artikelAnzeigen">
+        <Component class="javax.swing.JButton" name="jbBearbeiten_artikelSuchen">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
@@ -211,7 +200,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbBearbeiten_artikelAnzeigenActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbBearbeiten_artikelSuchenActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="jcbSuchkriterium_ArtikelAnzeige">
@@ -228,17 +217,11 @@
               </StringArray>
             </Property>
           </Properties>
-<<<<<<< HEAD
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbSpeichern_ArtikelAnzeigenActionPerformed"/>
-          </Events>
-=======
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
->>>>>>> 89806cc862e2033d0b3cc242f9fc6a7422d9ef87
         </Component>
-        <Component class="javax.swing.JButton" name="jbAnzeigen_ArtikelAnzeige">
+        <Component class="javax.swing.JButton" name="jbAnzeigen_ArtikelSuchen">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
@@ -249,7 +232,7 @@
             <Property name="text" type="java.lang.String" value="Anzeigen"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbAnzeigen_ArtikelAnzeigeActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbAnzeigen_ArtikelSuchenActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
