--- a/src/view/KundeAnlegen.form
+++ b/src/view/KundeAnlegen.form
@@ -42,11 +42,7 @@
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-<<<<<<< HEAD
-                  <Component id="KundeAnlegen" pref="684" max="32767" attributes="0"/>
-=======
                   <Component id="KundeAnlegen" pref="672" max="32767" attributes="0"/>
->>>>>>> 89806cc862e2033d0b3cc242f9fc6a7422d9ef87
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -108,11 +104,7 @@
                           </Group>
                       </Group>
                   </Group>
-<<<<<<< HEAD
-                  <EmptySpace pref="13" max="32767" attributes="0"/>
-=======
                   <EmptySpace max="32767" attributes="0"/>
->>>>>>> 89806cc862e2033d0b3cc242f9fc6a7422d9ef87
               </Group>
           </Group>
         </DimensionLayout>
@@ -212,9 +204,6 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jtfKreditlimit_KundenAnlegenActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JRadioButton" name="jrbLieferadresseIdentisch_KundeAnlegen">
           <Properties>
@@ -483,9 +472,6 @@
                   </StringArray>
                 </Property>
               </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jcbAnredeRG_KundeAnlegenActionPerformed"/>
-              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
@@ -634,7 +620,7 @@
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="jcbAnredeLD_KundeAnlegen" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
+                                  <Component id="jComboBox1" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
                                   <Component id="jtfName2_KundeAnlegen" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
                                   <Component id="jtfVorname2_KundeAnlegen" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
                                   <Component id="jtfFirma2_KundeAnlegen" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
@@ -664,7 +650,7 @@
                       <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel159" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jcbAnredeLD_KundeAnlegen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="jComboBox1" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -710,7 +696,7 @@
                 <Property name="text" type="java.lang.String" value="Anrede"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JComboBox" name="jcbAnredeLD_KundeAnlegen">
+            <Component class="javax.swing.JComboBox" name="jComboBox1">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="14" style="0"/>
